# AoC2020

./: CMakeLists.txt
src/: main1.cpp  main1_2.cpp  main2.cpp  main2_2.cpp  main3_1.cpp  main3_2.cpp  main6_1.cpp  main6_2.cpp
